@@ -1,21 +1,19 @@
 package com.erp.erp.domain.customers.controller;
 
-import com.erp.erp.domain.accounts.common.entity.Accounts;
-import com.erp.erp.domain.auth.service.AuthService;
 import com.erp.erp.domain.customers.common.dto.AddCustomerDto;
-import com.erp.erp.domain.customers.common.dto.AddCustomerDto.Response;
+import com.erp.erp.domain.customers.common.dto.GetAvailableCustomerNamesDto;
 import com.erp.erp.domain.customers.common.dto.GetCustomerDto;
 import com.erp.erp.domain.customers.common.dto.GetReservationCustomerDetailsDto;
 import com.erp.erp.domain.customers.common.dto.UpdateStatusDto;
 import com.erp.erp.domain.customers.common.entity.Customers;
 import com.erp.erp.domain.customers.service.CustomersService;
-import com.erp.erp.domain.institutes.common.entity.Institutes;
+import com.erp.erp.domain.payments.common.entity.Payments;
+import com.erp.erp.domain.plans.service.PlansService;
 import com.erp.erp.global.error.ApiResult;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -33,28 +31,19 @@ import org.springframework.web.bind.annotation.RestController;
 public class CustomersController {
 
   private final CustomersService customersService;
-  private final AuthService authService;
+  private final PlansService plansService;
 
   // note. 이후 프로필 사진 관련 처리 필요
+  // 로직 책임 분리 필요
   @Operation(summary = "고객 추가")
   @PostMapping("/addCustomer")
   public ApiResult<AddCustomerDto.Response> addCustomer(
       @Valid @RequestBody AddCustomerDto.Request req
       ) {
-    Accounts accounts = authService.getAccountsInfo();
-    Institutes institutes = accounts.getInstitutes();
+    Payments payments = customersService.addCustomer(req);
+    Customers customers = payments.getCustomers();
 
-
-    Customers customers = customersService.addCustomer(institutes,req);
-
-    AddCustomerDto.Response response = Response.builder()
-        .name(customers.getName())
-        .gender(customers.getGender())
-        .phone(customers.getPhone())
-        .address(customers.getAddress())
-        .birthDate(customers.getBirthDate())
-        .photoUrl(customers.getPhotoUrl())
-        .build();
+    AddCustomerDto.Response response = AddCustomerDto.Response.fromEntity(payments,customers);
 
     return ApiResult.success(response);
   }
@@ -69,25 +58,12 @@ public class CustomersController {
   @Operation(summary = "이용 중 고객 조회")
   @GetMapping("currentCustomers/{page}")
   public ApiResult<List<GetCustomerDto.Response>> getCurrentCustomers(@PathVariable int page) {
-    Accounts accounts = authService.getAccountsInfo();
-    Long institutesId = accounts.getInstitutes().getId();
 
-    List<Customers> customersList = customersService.getCurrentCustomers(institutesId, page);
+    List<Customers> customersList = customersService.getCurrentCustomers(page);
 
     List<GetCustomerDto.Response> response = customersList.stream()
-        .map(customers -> GetCustomerDto.Response.builder()
-            .photoUrl(customers.getPhotoUrl())
-            .name(customers.getName())
-            .gender(String.valueOf(customers.getGender()))
-            .phone(customers.getPhone())
-            .plans(customers.getInstitutes().getName())
-            .remainingTime(0)
-            .usedTime(0)
-            .registrationDate(0)
-            .tardinessCount(0)
-            .absenceCount(0)
-            .build())
-        .collect(Collectors.toList());
+        .map(GetCustomerDto.Response::fromEntity)
+        .toList();
 
     return ApiResult.success(response);
   }
@@ -96,26 +72,26 @@ public class CustomersController {
   @Operation(summary = "만료된 고객 조회")
   @GetMapping("expiredCustomer/{page}")
   public ApiResult<List<GetCustomerDto.Response>> getExpiredCustomers(@PathVariable int page) {
-    Accounts accounts = authService.getAccountsInfo();
-    Long institutesId = accounts.getInstitutes().getId();
-
-    List<Customers> customersList = customersService.getExpiredCustomers(institutesId, page);
+    List<Customers> customersList = customersService.getExpiredCustomers(page);
 
     List<GetCustomerDto.Response> response = customersList.stream()
-        .map(customers -> GetCustomerDto.Response.builder()
-            .photoUrl(customers.getPhotoUrl())
-            .name(customers.getName())
-            .gender(String.valueOf(customers.getGender()))
-            .phone(customers.getPhone())
-            .plans(customers.getInstitutes().getName())
-            .remainingTime(0)
-            .usedTime(0)
-            .registrationDate(0)
-            .tardinessCount(0)
-            .absenceCount(0)
-            .build())
-        .collect(Collectors.toList());
+        .map(GetCustomerDto.Response::fromEntity)
+        .toList();
+
 
     return ApiResult.success(response);
   }
+
+  @Operation(summary = "이용 가능 모든 고객 이름 조회")
+  @GetMapping("getAvailableCustomerNames")
+  public ApiResult<List<GetAvailableCustomerNamesDto.Response>> getAvailableCustomerNames() {
+    List<Customers> customersList = customersService.getCurrentCustomers();
+
+    List<GetAvailableCustomerNamesDto.Response> response = customersList.stream()
+        .map(GetAvailableCustomerNamesDto.Response::fromEntity)
+        .toList();
+
+    return ApiResult.success(response);
+  }
+
 }
